discussion/kv_engine/184414/184414_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54958: Move network related code GetRandomKey to the core

Move all of the network related code (encode/decode) in the
core and just request the "random" document from the engine

Change-Id: Ib7af3fe85e25ae73ed29d4d3305125524eb3f914

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-04 18:12:05.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-04 19:13:57.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22323/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/debug_helpers.h:22:6: error: no type named "string" in namespace "std" [clang-diagnostic-error]
std::string toPrintableString(std::string_view data);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/debug_helpers.h:22:36: error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
std::string toPrintableString(std::string_view data);
                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22323/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/debug_helpers.h:22:6:
error: no type named "string" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22323/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43360/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/debug_helpers.h:22:6:
error: no type named "string" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43360/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25649/ : FAILURE

Failure of GoogleTest "DcpTest.DcpDrainNoMeterNoThrottle":

<pre>
[ RUN      ] DcpTest.DcpDrainNoMeterNoThrottle
[2023-01-04T18:48:13.888Z] unknown file: Failure
[2023-01-04T18:48:13.888Z] C++ exception with description "Header::getResponse(): Header is not a response" thrown in the test body.
[2023-01-04T18:48:13.888Z] [  FAILED  ] DcpTest.DcpDrainNoMeterNoThrottle (27 ms)
DcpTest.DcpDrainNoMeterNoThrottle
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25649/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21947/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51650/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12044/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1085/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23893/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24367/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12131/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24789/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32786/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
